# setupcfg2nix

./: README.md  TODO.md  setup.cfg  setup.py
setupcfg2nix/: cli.py
