[metadata]
name = setupcfg2nix
version = attr: setupcfg2nix.VERSION
author = Shea Levy
author_email = shea.levy@target.com
url = https://github.com/target/setupcfg2nix
description = Generate nix expressions from setup.cfg for a python package
classifiers =
  License :: OSI Approved :: MIT License

[options]
install_requires =
  setuptools
python_requires = >=3.6
packages =
  setupcfg2nix

[options.entry_points]
console_scripts =
  setupcfg2nix = setupcfg2nix.cli:main
